WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311662
AX: Quad and cubic Bézier curve conversions aren't handled correctly in WebAccessibilityObjectWrapperMac, causing incorrect paths to be returned
https://bugs.webkit.org/show_bug.cgi?id=311662
Summary
AX: Quad and cubic Bézier curve conversions aren't handled correctly in WebAc...
Tyler Wilcock
Reported
2026-04-07 10:57:30 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-07 10:57:35 PDT
<
rdar://problem/174252190
>
Tyler Wilcock
Comment 2
2026-04-07 11:03:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62207
EWS
Comment 3
2026-04-07 17:10:33 PDT
Committed
310752@main
(622e178d0c64): <
https://commits.webkit.org/310752@main
> Reviewed commits have been landed. Closing PR #62207 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug